Fix preview misaligned

--- a/src/components/ColorPickerPreview/styles.css
+++ b/src/components/ColorPickerPreview/styles.css
@@ -15,12 +15,9 @@
 
 .ring-wrapper {
   position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  /* top: 50%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%);
 }
 
 .hover-color-badge {
